Product Carousel: View cart button broken on astra theme is fixed

--- a/assets/front-end/css/view/woo-product-carousel.css
+++ b/assets/front-end/css/view/woo-product-carousel.css
@@ -1129,7 +1129,7 @@
             flex-direction: column;
   }
   .eael-product-list-column-mobile-2 .eael-product-grid .woocommerce ul.products .eael-product-wrap .product-image-wrap,
-.eael-product-list-column-mobile-2 .eael-product-grid .woocommerce ul.products .eael-product-wrap .product-details-wrap {
+  .eael-product-list-column-mobile-2 .eael-product-grid .woocommerce ul.products .eael-product-wrap .product-details-wrap {
     width: 100%;
   }
   .eael-product-list-column-mobile-2 .eael-product-grid .woocommerce ul.products .eael-product-wrap .product-image-wrap {
@@ -1164,13 +1164,22 @@
     margin: 1%;
   }
 }
-.theme-astra .woocommerce.eael-woo-product-carousel ul.products, .woocommerce-page .eael-woo-product-carousel ul.products {
+.theme-astra .woocommerce.eael-woo-product-carousel ul.products, .theme-astra .woocommerce-page .eael-woo-product-carousel ul.products {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-column-gap: 0;
      -moz-column-gap: 0;
           column-gap: 0;
+}
+.theme-astra .woocommerce ul.products li.product a.added_to_cart.wc-forward {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .theme-blocksy .button:before {
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(enabled=false)";
